[tool.poetry]
name = "kanaplex"
version = "0.3.1"
description = ""
authors = ["dousherve <louisdousherve@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
kanaplex = "kanaplex.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
